force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/JBCXM__GSSurveyTextAnalytics__c.object-meta.xml
<CustomObject>
    <label>Survey Text Analytics</label>
    <nameField>
        <label>Survey Text Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Text Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>