force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__Aspect__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Aspect__c</fullName>
    <label>Aspect</label>
    <type>TextArea</type>
</CustomField>