force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__AspectGroup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AspectGroup__c</fullName>
    <label>AspectGroup</label>
    <type>TextArea</type>
</CustomField>