force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__Sentence__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Sentence__c</fullName>
    <label>Sentence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>