force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__SentenceId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SentenceId__c</fullName>
    <label>Sentence Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>