force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__SurveyUserAnswer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyUserAnswer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey User Answer</label>
    <referenceTo>JBCXM__SurveyUserAnswer__c</referenceTo>
    <relationshipLabel>Survey Text Analytics Answer</relationshipLabel>
    <relationshipName>Survey_Text_Analytics_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>