force-app/main/default/objects/JBCXM__GSSurveyTextAnalytics__c/fields/JBCXM__SurveyUserComment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyUserComment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey User Comment</label>
    <referenceTo>JBCXM__SurveyUserAnswer__c</referenceTo>
    <relationshipLabel>Survey Text Analytics Comment</relationshipLabel>
    <relationshipName>Survey_Text_Analytics_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>